--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "compile": "yarn solcjs --bin --abi --include-path node_modules/ --base-path . -o . SimpleStorage.sol"
   },
   "dependencies": {
+    "ethers": "^6.1.0",
     "solc": "0.8.7-fixed"
   }
 }
