--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "ethers": "^6.1.0",
     "ganache": "^7.7.6",
     "solc": "0.8.7-fixed"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.4",
+    "prettier-plugin-solidity": "^1.1.3"
   }
 }
